compiler/tools/fpp-check/test/enum/invalid_constants.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/enum/invalid_constants.fpp: 1.1
enum E { A = 1, B }
^
error: enum constants must be all explicit or all implied
